@@ -6,6 +6,8 @@ PHP                                                                        NEWS
 - Added stream filter support to mcrypt extension (ported from 
   mcrypt_filter). (Stas)
 
+- Fixed bug #51213 (pdo_mssql is trimming value of the money column). (Ilia, 
+  alexr at oplot dot com)
 - Fixed bug #51190 (ftp_put() returns false when transfer was successful).  
   (Ilia)
 - Fixed bug #51176 (Static calling in non-static method behaves like $this->).
